(fix) Add support focus state for high contrast mode in Windows

--- a/checkboxes/styles.css
+++ b/checkboxes/styles.css
@@ -106,4 +106,5 @@ h1{
     0 0 0 2px white,
     0 0 1px 4px var(--dark-blue),
     0 0 2px 5px white;
+  outline: 2px solid transparent;
 }
